feat(password-input): refactor inputs to use new input/output decorators and improve password visibility toggle

--- a/src/app/components/shared/inputs/password-input/password-input.component.html
+++ b/src/app/components/shared/inputs/password-input/password-input.component.html
@@ -1,13 +1,14 @@
 <app-text-input
-  [icon]="icon"
-  [type]="hidePassword ? 'password' : 'text'"
-  [placeholder]="placeholder"
-  [control]="control"
-  [disabled]="disabled"
-  [readOnly]="readOnly"
-  [buttonIcon]="hidePassword ? 'pi pi-eye' : 'pi pi-eye-slash'"
-  [addonWidth]="addonWidth"
+  [icon]="icon()"
+  [label]="label()"
+  [type]="hidePassword() ? 'password' : 'text'"
+  [placeholder]="placeholder()"
+  [control]="control()"
+  [disabled]="disabled()"
+  [readOnly]="readOnly()"
+  [buttonIcon]="hidePassword() ? 'pi pi-eye' : 'pi pi-eye-slash'"
+  [addonWidth]="addonWidth()"
   (clickButton)="togglePassword()"
-  validationField="password"
+  [validationField]="validationField()"
   language="en"
 />
