fix(login-form): adjust margin styles for better layout consistency

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -19,12 +19,12 @@
   </div>
 </div>
 <form
-  class="flex h-full mb-[-3rem] flex-nowrap flex-col gap-5 lg:gap-10"
+  class="flex h-full -mb-12 flex-nowrap flex-col gap-5 lg:gap-10"
   [formGroup]="loginForm"
   (ngSubmit)="onSubmit()"
 >
   <h3
-    class="text-center mb-4 lg:mx-[-2rem] text-nowrap text-lg md:text-2xl leading-7 lg:leading-10 font-bold"
+    class="text-center mb-4 lg:-mx-8 text-nowrap text-lg md:text-2xl leading-7 lg:leading-10 font-bold"
     [innerHTML]="loginTitle"
   ></h3>
 
