--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -60,13 +60,7 @@
     </p>
 
     <div class="grid grid-cols-1 gap-4">
-      <app-text-input
-        label="رمز یک بار مصرف"
-        placeholder="رمز یکبار مصرف"
-        validationField="optCode"
-        [control]="optCodeCrl"
-        type="number"
-      />
+      <app-opt-input [control]="optCodeCrl" [length]="6" />
 
       <div class="flex justify-center items-center py-1">
         <app-button
