feat(forget-password): integrate captcha guard for OTP verification

--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -74,3 +74,9 @@
     </div>
   </div>
 </p-dialog>
+
+<app-panel-guard-captcha-form
+  [sesstionId]="ctrl('sessionId')"
+  [activeCaptcha]="isCaptchaGuardVisible()"
+  [action]="verifyCode"
+/>
