refactor(select-input.component): add transparent background

--- a/src/app/components/shared/inputs/select-input/select-input.component.html
+++ b/src/app/components/shared/inputs/select-input/select-input.component.html
@@ -28,7 +28,7 @@
       [placeholder]="placeholder"
       optionLabel="label"
       optionValue="value"
-      class="h-full w-full border-y-2 border-l-2 rounded-l-2xl dark:bg-transparent border-gray-400 placeholder:text-gray-400 text-sm"
+      class="h-full w-full bg-transparent border-y-2 border-l-2 rounded-l-2xl dark:bg-transparent border-gray-400 placeholder:text-gray-400 text-sm"
       [ngClass]="{
         'border-red-500': control.touched && control.invalid,
         'bg-gray-100 text-gray-500 opacity-60 cursor-not-allowed': disabled,
