refactor(driver-truck-wallet-form.component): add section in UI + restyle

--- a/src/app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-truck-wallet-form/driver-truck-wallet-form.component.html
@@ -49,7 +49,7 @@
               [addonWidth]="addonWidth"
               [disableSearchButton]="smartCard.invalid || loading"
               validationField="smartCard"
-              class="min-w-[70%]"
+              class="min-w-[70%] flex-col md:flex-row"
               [placeholder]="
                 appTitle.getPlaceholder('truckSmartCardNumberPlaceholder')
               "
